# stiu_robot

./: README.md
JH/: init.sh
JH/BBTest/: .project  encoderDriver.py  ioLib.py  testMotors.py
JH/STIU_LineDetection/: .project  main.py  processed.avi
JH/movementControl/: CMakeLists.txt  package.xml
JH/movementControl/scripts/: encoderDriver.py
MotorController/: .cproject  .project  Motor.cpp  Motor.h
MotorController/src/: MotorController.cpp
MotorControllerNode/: .project  MotorControllerLib.py  PWM_scan.py  ioLib.py  testMotors.py
PWMLib/: .cproject  .project  PWM.cpp  PWM.h  util.cpp  util.h
PWMlib/: .cproject  .project
doc/schematics/: STIU_general.sch
kinematics/: CMakeLists.txt  package.xml
kinematics/scripts/: CalcVel_client.py  CalcVel_server.py
movement_control/: CMakeLists.txt  package.xml
movement_control/msg/: WheelData.msg
movement_control/scripts/: CalcVel_client.py  CalcVel_server.py  DoPID.py  PID_velocity.py  PID_velocity_old.py  listener_motor.py  listener_omegas.py  talker_wheel.py
movement_control/scripts/MovementControl/: .project  Test.py  publisher.cpp
movement_control/srv/: CalcVel.srv  PassVel.srv
src/MotorControllerNode/: ioLib.py
src/PWM_scan/: .project  PWM_scan.py
stiu_setup_tf/: CMakeLists.txt  frames.gv  package.xml
stiu_setup_tf/config/: control.yaml
stiu_setup_tf/launch/: backup.launch  control.launch  display.launch  display_2.launch  gazebo.launch  laser_scan.launch  talker_listener.launch
stiu_setup_tf/msg/: MotorCmd.msg
stiu_setup_tf/rviz/: urdf.rviz
stiu_setup_tf/scripts/: keyboardSteering.py  listener.py  listener_lidar.py  test.py
stiu_setup_tf/src/: frames.gv  state_publisher.cpp  state_publisher_old.cpp  tf_broadcaster.cpp  tf_listener.cpp
stiu_setup_tf/urdf/: stiu.gv  stiu.urdf  stiu.xacro
